--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main]
+    branches: ["*"]
 
 permissions:
   contents: write    # 👈 necessary to allow pushing to gh-pages branch
